Deployment/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: millennium-falcon-backend
  labels:
    app: millennium-falcon-backend
spec:
  type: LoadBalancer
  selector:
    app: millennium-falcon-backend
  ports:
    - name: http
      port: 80
      targetPort: 80
