Deployment/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: millennium-falcon-frontend
spec:
  type: LoadBalancer
  selector:
    app: millennium-falcon-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
